# vitaformat

./: CMakeLists.txt  LICENSE
benchmarks/: benchmark.cpp
cmake/: VitaFormatConfig.cmake.in
tests/: test_ensure_fstring.cpp  test_format.cpp
vita/: format.hpp
vita/detail/: compile_parse.hpp  ensure_fstring.hpp  float_to_str.hpp  int_to_str.hpp  output.hpp  parse.hpp
